-------------------------------------------------------------------------------
53 :
	ADDED: Support for retreiving RCon players + missions
	ADDED: Ability for filtering player ip/port/ping from Rcon players

	FIXED: Another small fix for loading extdb-conf.ini
	FIXED: More Fixes for Steam Protocol

	FIXED: Commandline arguments (removed " from arguments)
	FIXED: -extDB_VAR fixed parsing for Windows

	UPDATED: Rcon Code, commands will execute straight away now

	MINOR: Some Code Improvements

-------------------------------------------------------------------------------
52 :
	FIXED: Loading extdb-conf.ini

-------------------------------------------------------------------------------
51 :
	ADDED: HTTP_RAW Protocol (Basic Auth, GET, POST support)
	ADDED: STEAM_V2 (Removed case insensitive for performance reasons)

	ADDED: -extDB2_VAR  -extDB2_WORK commandline arguments  (Linux + Windows)
			_VAR is retreivable via "9:VAR", before extension lock
			_WORK defines custom location for extdb-conf.ini / extDB directories

	FIXED: Issue were STEAM / Redis Protocols wouldn't save result.

	UPDATED: RemoteServer with basic blacklisting ips that failed to login over 3 times

	MINOR: Fixed console output on debug extension builds
	MINOR: Updated Poco / Boost / MySQL / SPDLog Libraries
	MINOR: Tweaked Compiler Flags

-------------------------------------------------------------------------------
50 :
	ADDED: V2 SQL Protocols, empty results return [] instead of [[]]

	FIXED: Loading STEAM Protocol
	FIXED: Removed debug output for timing mutex locks

-------------------------------------------------------------------------------
49:
	FIXED: SQL_CUSTOM: Strip Custom Input Chars -> Strip Custom Chars
	UPDATED: SQL_CUSTOM version = 9

-------------------------------------------------------------------------------
48:
	ADDED: SQL_CUSTOM: Support for loading multiple sql_custom.ini files
	ADDED: SQL_CUSTOM: Vac_SteamID + Vac_BeGUID Options

	FIXED: Loading MISC + LOG Protocols
